Mais alteracoes para mobile.